--- a/package.json
+++ b/package.json
@@ -8,15 +8,38 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node -P tsconfig-seed.json -r tsconfig-paths/signup --transpileOnly prisma/seed.ts"
+  },
   "dependencies": {
+    "@next/font": "^13.2.4",
+    "@prisma/client": "4.6.1",
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "clsx": "1.2.1",
+    "cookie": "^0.5.0",
+    "css-reset-and-normalize": "2.3.6",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "jose": "4.11.1",
     "next": "13.2.4",
+    "next-cloudinary": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "2.0.10",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "@iconify/react": "^4.1.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
+    "autoprefixer": "^10.4.14",
+    "bcrypt": "^5.1.0",
+    "postcss": "^8.4.21",
+    "prisma": "4.6.1",
+    "tailwindcss": "^3.2.4",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.1.1"
   }
 }
