add cloudinary uploads and references and pages

--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "prisma": {
-    "seed": "ts-node -P tsconfig-seed.json -r tsconfig-paths/signup --transpileOnly prisma/seed.ts"
+    "seed": "ts-node -P tsconfig-seed.json -r tsconfig-paths/register --transpileOnly prisma/seed.ts"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.9.2",
     "@next/font": "^13.2.4",
     "@prisma/client": "4.6.1",
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "cloudinary-core": "^2.13.0",
     "clsx": "1.2.1",
     "cookie": "^0.5.0",
     "css-reset-and-normalize": "2.3.6",
